--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -213,12 +213,35 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <ResourceCompile Include="SCICompanion.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Docs\source\images\AudioPreview.png" />
+    <Image Include="Docs\source\images\CuePoint.png" />
+    <Image Include="Docs\source\images\EcoBoy.png" />
+    <Image Include="Docs\source\images\EditAudio.png" />
+    <Image Include="Docs\source\images\KQ6Narrator.png" />
+    <Image Include="Docs\source\images\KQ6Talker.png" />
+    <Image Include="Docs\source\images\LipSyncDialog.png" />
+    <Image Include="Docs\source\images\LoopPoint.png" />
+    <Image Include="Docs\source\images\MessageEditor.png" />
     <Image Include="Docs\source\images\MessageEntry.PNG" />
     <Image Include="Docs\source\images\MessageHeaderInclude.PNG" />
     <Image Include="Docs\source\images\MessageLightSwitch.PNG" />
     <Image Include="Docs\source\images\MessageLightSwitchCode.PNG" />
+    <Image Include="Docs\source\images\MIDIImport.png" />
+    <Image Include="Docs\source\images\NewWord.png" />
     <Image Include="Docs\source\images\Nouns.PNG" />
+    <Image Include="Docs\source\images\PaletteAdjust.png" />
+    <Image Include="Docs\source\images\PaletteEditor.png" />
+    <Image Include="Docs\source\images\PaletteNotUsed.PNG" />
+    <Image Include="Docs\source\images\PaletteUnderline.PNG" />
+    <Image Include="Docs\source\images\PaletteUsedInResource.PNG" />
+    <Image Include="Docs\source\images\PhonemeEditor.png" />
+    <Image Include="Docs\source\images\SoundEditor.jpg" />
+    <Image Include="Docs\source\images\SpeechLipSyncSection.png" />
+    <Image Include="Docs\source\images\TextEditor.jpg" />
     <Image Include="Docs\source\images\Verbs.PNG" />
+    <Image Include="Docs\source\images\Vocab_Example.png" />
+    <Image Include="Docs\source\images\Vocab_TypeExample.png" />
+    <Image Include="Docs\source\images\WordFind.png" />
     <Image Include="Files\TemplateGame\SCI0.bmp" />
     <Image Include="Files\TemplateGame\SCI0\game.bmp" />
     <Image Include="Files\TemplateGame\SCI1.1.bmp" />
@@ -229,10 +252,24 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
   <ItemGroup>
     <None Include="Docs\make.bat" />
     <None Include="Docs\Makefile" />
+    <None Include="Docs\source\audio.rst" />
+    <None Include="Docs\source\audiofiles.rst" />
     <None Include="Docs\source\conf.py" />
+    <None Include="Docs\source\decompiler.rst" />
+    <None Include="Docs\source\includes\standard.rst" />
     <None Include="Docs\source\index.rst" />
     <None Include="Docs\source\intro.rst" />
+    <None Include="Docs\source\lipsync.rst" />
+    <None Include="Docs\source\messageaudio.rst" />
     <None Include="Docs\source\messages.rst" />
+    <None Include="Docs\source\palettecycling.rst" />
+    <None Include="Docs\source\palettes.rst" />
+    <None Include="Docs\source\recording.rst" />
+    <None Include="Docs\source\sounds.rst" />
+    <None Include="Docs\source\talkers.rst" />
+    <None Include="Docs\source\texts.rst" />
+    <None Include="Docs\source\views.rst" />
+    <None Include="Docs\source\vocabs.rst" />
     <None Include="Files\CompileInclude\kernels.scp" />
     <None Include="Files\CompileInclude\keys.sh" />
     <None Include="Files\CompileInclude\keys.shp" />
