- change keyboard shortcuts for VPC - fix pasting into polygon point edit box - documentation updates

--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -214,12 +214,49 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
   </ItemGroup>
   <ItemGroup>
     <Image Include="Docs\source\images\AudioPreview.png" />
+    <Image Include="Docs\source\images\Boom.gif" />
+    <Image Include="Docs\source\images\ColorShift.png" />
+    <Image Include="Docs\source\images\CommandList_Example.png" />
+    <Image Include="Docs\source\images\CommandList_GreenLine.png" />
+    <Image Include="Docs\source\images\CommandPaste_Example.png" />
+    <Image Include="Docs\source\images\ConvertBitmap.jpg" />
     <Image Include="Docs\source\images\CuePoint.png" />
+    <Image Include="Docs\source\images\CursorExample.png" />
+    <Image Include="Docs\source\images\DayNight.png" />
+    <Image Include="Docs\source\images\DrawingAnimate.png" />
+    <Image Include="Docs\source\images\DrawingDither.png" />
+    <Image Include="Docs\source\images\DrawingEyedropper.png" />
+    <Image Include="Docs\source\images\DrawingFill.png" />
+    <Image Include="Docs\source\images\DrawingFlip.png" />
+    <Image Include="Docs\source\images\DrawingGrayscale.png" />
+    <Image Include="Docs\source\images\DrawingImportFiles.png" />
+    <Image Include="Docs\source\images\DrawingInvert.png" />
+    <Image Include="Docs\source\images\DrawingLine.png" />
+    <Image Include="Docs\source\images\DrawingPen.png" />
+    <Image Include="Docs\source\images\DrawingPlacement.png" />
+    <Image Include="Docs\source\images\DrawingReplace.png" />
+    <Image Include="Docs\source\images\DrawingSelect.png" />
+    <Image Include="Docs\source\images\DrawingShapes.png" />
+    <Image Include="Docs\source\images\DrawingTransparentEyedropper.png" />
+    <Image Include="Docs\source\images\DrawingZoom.png" />
+    <Image Include="Docs\source\images\DrawPic-bak.gif" />
+    <Image Include="Docs\source\images\DrawPic.gif" />
     <Image Include="Docs\source\images\EcoBoy.png" />
     <Image Include="Docs\source\images\EditAudio.png" />
+    <Image Include="Docs\source\images\EGAVGA.png" />
+    <Image Include="Docs\source\images\FakeEgoList.png" />
+    <Image Include="Docs\source\images\FakeEgoTool.png" />
+    <Image Include="Docs\source\images\FakeEgo_Example.png" />
+    <Image Include="Docs\source\images\Flame.gif" />
+    <Image Include="Docs\source\images\FontEditor.jpg" />
+    <Image Include="Docs\source\images\History.png" />
+    <Image Include="Docs\source\images\ImportBackground.jpg" />
+    <Image Include="Docs\source\images\ImportImage.jpg" />
+    <Image Include="Docs\source\images\ImportImageDitherCompare.png" />
     <Image Include="Docs\source\images\KQ6Narrator.png" />
     <Image Include="Docs\source\images\KQ6Talker.png" />
     <Image Include="Docs\source\images\LipSyncDialog.png" />
+    <Image Include="Docs\source\images\LoadTraceImage.png" />
     <Image Include="Docs\source\images\LoopPoint.png" />
     <Image Include="Docs\source\images\MessageEditor.png" />
     <Image Include="Docs\source\images\MessageEntry.PNG" />
@@ -230,17 +267,40 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <Image Include="Docs\source\images\NewWord.png" />
     <Image Include="Docs\source\images\Nouns.PNG" />
     <Image Include="Docs\source\images\PaletteAdjust.png" />
+    <Image Include="Docs\source\images\PaletteButton.png" />
+    <Image Include="Docs\source\images\PaletteChooser.png" />
     <Image Include="Docs\source\images\PaletteEditor.png" />
     <Image Include="Docs\source\images\PaletteNotUsed.PNG" />
     <Image Include="Docs\source\images\PaletteUnderline.PNG" />
     <Image Include="Docs\source\images\PaletteUsedInResource.PNG" />
     <Image Include="Docs\source\images\PhonemeEditor.png" />
+    <Image Include="Docs\source\images\PicEditor.jpg" />
+    <Image Include="Docs\source\images\PicHelper.jpg" />
+    <Image Include="Docs\source\images\PolygonTool.png" />
+    <Image Include="Docs\source\images\PriBands.jpg" />
+    <Image Include="Docs\source\images\PriLineTool.png" />
+    <Image Include="Docs\source\images\Resize_Example.png" />
+    <Image Include="Docs\source\images\Selection_Example.png" />
+    <Image Include="Docs\source\images\SliderBar.png" />
     <Image Include="Docs\source\images\SoundEditor.jpg" />
     <Image Include="Docs\source\images\SpeechLipSyncSection.png" />
+    <Image Include="Docs\source\images\SQ5Polygon.png" />
     <Image Include="Docs\source\images\TextEditor.jpg" />
+    <Image Include="Docs\source\images\ToggleTraceImage.png" />
+    <Image Include="Docs\source\images\TraceOpacity.png" />
+    <Image Include="Docs\source\images\TracingImage.jpg" />
+    <Image Include="Docs\source\images\TransformCoords.png" />
+    <Image Include="Docs\source\images\TransformCoords_Example.png" />
+    <Image Include="Docs\source\images\Upload.png" />
     <Image Include="Docs\source\images\Verbs.PNG" />
+    <Image Include="Docs\source\images\ViewEditor.png" />
+    <Image Include="Docs\source\images\ViewLoop.png" />
+    <Image Include="Docs\source\images\ViewLoopAnimated.gif" />
+    <Image Include="Docs\source\images\ViewPalettes.png" />
     <Image Include="Docs\source\images\Vocab_Example.png" />
     <Image Include="Docs\source\images\Vocab_TypeExample.png" />
+    <Image Include="Docs\source\images\VPC.png" />
+    <Image Include="Docs\source\images\VPCScreens.jpg" />
     <Image Include="Docs\source\images\WordFind.png" />
     <Image Include="Files\TemplateGame\SCI0.bmp" />
     <Image Include="Files\TemplateGame\SCI0\game.bmp" />
@@ -255,7 +315,10 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Docs\source\audio.rst" />
     <None Include="Docs\source\audiofiles.rst" />
     <None Include="Docs\source\conf.py" />
+    <None Include="Docs\source\cursors.rst" />
     <None Include="Docs\source\decompiler.rst" />
+    <None Include="Docs\source\fonts.rst" />
+    <None Include="Docs\source\importimages.rst" />
     <None Include="Docs\source\includes\standard.rst" />
     <None Include="Docs\source\index.rst" />
     <None Include="Docs\source\intro.rst" />
@@ -264,7 +327,11 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Docs\source\messages.rst" />
     <None Include="Docs\source\palettecycling.rst" />
     <None Include="Docs\source\palettes.rst" />
+    <None Include="Docs\source\pics.rst" />
+    <None Include="Docs\source\polygons.rst" />
+    <None Include="Docs\source\rastertools.rst" />
     <None Include="Docs\source\recording.rst" />
+    <None Include="Docs\source\selectionandresize.rst" />
     <None Include="Docs\source\sounds.rst" />
     <None Include="Docs\source\talkers.rst" />
     <None Include="Docs\source\texts.rst" />
