--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -752,9 +752,8 @@ BEGIN
     VK_F10,         ID_PLAY,                VIRTKEY, NOINVERT
     VK_F11,         ID_STOP,                VIRTKEY, NOINVERT
     VK_F12,         ID_RECORD,              VIRTKEY, NOINVERT
-    VK_NUMPAD7,     ID_SHOWVISUALSCREEN,    VIRTKEY, NOINVERT
-    VK_NUMPAD8,     ID_SHOWPRIORITYSCREEN,  VIRTKEY, NOINVERT
-    VK_NUMPAD9,     ID_SHOWCONTROLSCREEN,   VIRTKEY, NOINVERT
+    VK_F3,          ID_SHOWPRIORITYSCREEN,  VIRTKEY, NOINVERT
+    VK_F4,          ID_SHOWCONTROLSCREEN,   VIRTKEY, NOINVERT
 END
 
 IDR_ACCELERATORPICCOMMANDS ACCELERATORS
@@ -1737,7 +1736,7 @@ BEGIN
     COMBOBOX        IDC_COMBOPOLYTYPE,44,90,66,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Type:",IDC_STATICPOLYTYPE,7,92,30,8
     CONTROL         "Show polygons",IDC_CHECKSHOWPOLYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,59,66,10
-    EDITTEXT        IDC_EDIT_POLYPOINTS,7,137,83,21,ES_MULTILINE
+    EDITTEXT        IDC_EDIT_POLYPOINTS,7,137,83,21,ES_MULTILINE | ES_AUTOVSCROLL
     PUSHBUTTON      "Edit",ID_UPLOAD,91,138,19,14,BS_ICON | BS_FLAT
     RTEXT           "Name:",IDC_STATICNAME,9,76,28,8
     EDITTEXT        IDC_EDITNAME,44,74,47,14,ES_AUTOHSCROLL
