--- a/SCICompanion/SCICompanion.vcxproj.filters
+++ b/SCICompanion/SCICompanion.vcxproj.filters
@@ -387,6 +387,48 @@
     <Image Include="Docs\source\images\ScriptEditor.jpg">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Docs\source\images\AspectRatio43.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\AspectRatio1610.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\AspectRatioSCIComp.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\Debug.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\Gradient.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\ImportedLogo.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\ImportLogo.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\LogoGradient.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\MakeRedBlueGrad.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\OutputPane.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\SierraDebugger.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\TemplateGameDebugger1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\TemplateGameDebugger2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Docs\source\images\Waterfall.gif">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\SCICompanion.rc2">
@@ -513,16 +555,9 @@
     <None Include="Files\TemplateGame\SCI1.1\INSTALL.HLP" />
     <None Include="Files\TemplateGame\SCI1.1\INSTALL.SCR" />
     <None Include="Files\TemplateGame\SCI1.1\INTERP.ERR" />
-    <None Include="Files\TemplateGame\SCI1.1\LSL6.BAT">
-      <Filter>Source Files</Filter>
-    </None>
     <None Include="Files\TemplateGame\SCI1.1\MICROSOF.DRV" />
     <None Include="Files\TemplateGame\SCI1.1\MT32.DRV" />
     <None Include="Files\TemplateGame\SCI1.1\PROAUDIO.DRV" />
-    <None Include="Files\TemplateGame\SCI1.1\README" />
-    <None Include="Files\TemplateGame\SCI1.1\README.BAT">
-      <Filter>Source Files</Filter>
-    </None>
     <None Include="Files\TemplateGame\SCI1.1\resource.000" />
     <None Include="Files\TemplateGame\SCI1.1\RESOURCE.CFG" />
     <None Include="Files\TemplateGame\SCI1.1\resource.map" />
@@ -995,6 +1030,11 @@
     <None Include="Docs\source\selectionandresize.rst" />
     <None Include="Docs\source\preferences.rst" />
     <None Include="Docs\source\scripts.rst" />
+    <None Include="Docs\source\anatomy.rst" />
+    <None Include="Docs\source\aspectratio.rst" />
+    <None Include="Docs\source\debugging.rst" />
+    <None Include="Docs\source\outputpane.rst" />
+    <None Include="Docs\source\undo.rst" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\SCICompanion.manifest" />
